fix: header overlay on mobile

--- a/app/sass/layout/_header.scss
+++ b/app/sass/layout/_header.scss
@@ -128,7 +128,9 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 50px;
+    height: 42.438px;
+    border-bottom-right-radius: 23px;
+    border-bottom-left-radius: 23px;
     z-index: 666;
     padding-top: 0;
     &>.container {
